
Slick 8.x-1.0-dev, 2016-09-29
-----------------------------
- Marked it Beta4.
- #2799617 by trobey: Include project namespace for module dependencies.
- Removed useless spaceless from sub-templates.
- Added Thumbnail position option to move around thumbnail nav at ease. Styling
  is up to you as usual.
- Fixed for non-empty slick, nothing should be processed when items are empty.

Slick 8.x-1.0-dev, 2016-09-07
-----------------------------
- Marked it Beta3.
- Changed RTL placement from content_attributes to attributes to allow
  correcting arrow placement which is placed outside slider.
- Refined most descriptions to be more helpful.

Slick 8.x-1.0-dev, 2016-09-05
-----------------------------
- #2793477 by daniel.bosen: Hook requirements returns error when libraries
  module is used.
- #2792319 by audriusb: Undefined index: caption.
- Refined form elements, and a few cleanups.

Slick 8.x-1.0-dev, 2016-08-30
-----------------------------
- Removed non-contextual descriptions.
- Fixed for SlickFormatter::getThumbnail().
- Fixed for CHANGELOG.txt versions.

Slick 8.x-1.0-dev, 2016-08-29
-----------------------------
- Removed useless t() from skin names.
- Changed Cache default value to No caching.
- A few cleanups.

Slick 8.x-1.0-dev, 2016-08-23
-----------------------------
- #2783111 by slashrsm: Slick's CSS is affecting all iFrames not just the ones
  that appear in the Slick carousel.
- #2785317 by patilvishalvs: Make breakpoints field fault proof.
  Changed breakpoints field back from number to textfield like D7.

Slick 8.x-1.0-dev, 2016-08-03
-----------------------------
- #2768457 by chr.fritsch: Add libraries support.
- #2769073 by audriusb: Allow adding additional cache tags.
- Fixed for trivial typos $defines_skins to $defined_skins.

Slick 8.x-1.0-dev, 2016-07-14
-----------------------------
- Removed useles delay for an unslick since slick already kicks in.
- #2765353 by Vinay15: Remove @file tag docblock from all the .php files.
